--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <a href="service.html" class="nav-item nav-link">Services</a>
                     <a href="guard.html" class="nav-item nav-link">Guards</a>
-					   <a href="guard.html" class="nav-item nav-link">Carrier</a>
+		<a href="job.html" class="nav-item nav-link">Carrier</a>
 					   
                     <div class="nav-item dropdown">
 						<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
